--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
         <h2>Video</h2>
         <div class="embed-responsive embed-responsive-4by3">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/hsKbYYBnGDM"></iframe>"></iframe>
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/hsKbYYBnGDM"></iframe></iframe>
         </div>
         
       </div>  
