--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
   <script src = "d3.layout.cloud.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-  <script src="http://d3js.org/d3.v3.min.js"></script>
  <script src="https://rawgit.com/jasondavies/d3-cloud/master/build/d3.layout.cloud.js"></script>
  <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
   <style>
@@ -48,7 +46,7 @@
     <div class= "container">
       <div class = "jumbotron">
         <h2>First Chart Type</h2>
-        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+        <p>Filler: Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
         <div id="myDiv" style="width: 480px; height: 400px;">
           <!-- Plotly chart will be drawn here -->
         </div>
@@ -58,7 +56,7 @@
     <div class= "container">
       <div class = "jumbotron">
         <h2>Second Chart Type</h2>
-        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+        <p>Filler: Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
         <div id="myDiv2" style="width:480px; height: 400px">
           <!-- Pie Chart is drawn here -->
         </div>
@@ -68,7 +66,7 @@
     <div class= "container">
       <div class = "jumbotron">
         <h2>Third Chart Type</h2>
-        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+        <p>Filler:Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
         <h2>Word Cloud </h2>
         <div id="chart">
           <!-- Wordcloud is drawn here -->
@@ -78,8 +76,8 @@
 
     <div class= "container">
       <div class = "jumbotron">
-        <h2>Fourth Chart Type (Not a chart!)</h2>
-        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+        <h2>Fourth Chart Type (Not a chart, but a video!)</h2>
+        <p>Filler: Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
         <h2>Video</h2>
         <div class="embed-responsive embed-responsive-4by3">
           <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/hsKbYYBnGDM"></iframe></iframe>
