--- a/step_by_step/step_4.html
+++ b/step_by_step/step_4.html
@@ -1,4 +1,5 @@
-
+<!-- This is the basic webpage--> 
+<!-- We call it a hypertext markup language document -->
 <!DOCTYPE html>
 <html lang="en">
 <head> 
