Whoops!  Added the  piechart div to step_7.html

--- a/step_by_step/step_7.html
+++ b/step_by_step/step_7.html
@@ -64,7 +64,9 @@
       <div class = "jumbotron">
         <h2>Second Chart Type: Pie Graph with Plotly</h2>
         <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-        
+        <div id="myDiv2" style="width:480px; height: 400px">
+          <!-- Pie Chart is drawn here -->
+        </div>
       </div>  
     </div>
 
