added and modified steps, added links and extrapolated overview content, and added github how-to

--- a/step_by_step/step_1.html
+++ b/step_by_step/step_1.html
@@ -8,7 +8,7 @@
 </head> 
 <!-- body: where we will put the stuff we can see! -->
 <body>
-Hello World!     
+<h1>Hello World!</h1>     
 </body>
 
 
