--- a/step_by_step/step_7.html
+++ b/step_by_step/step_7.html
@@ -31,7 +31,7 @@
     body {
      padding-bottom: 50px; 
     }
-    /*changing teh  font and increasing the size of the font*/
+    /* changing the font and increasing the size of the font*/
     footer{
       font-family:'Playfair Display', serif; 
       font-size: 24px;
