--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
         <h2>Fourth Chart Type (Not a chart, but a video!)</h2>
         <p>Filler: Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
         <h2>Video</h2>
-        <div class="embed-responsive embed-responsive-4by3">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/hsKbYYBnGDM"></iframe></iframe>
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/Q0CbN8sfihY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
         
       </div>  
