--- a/step_by_step/step_8.html
+++ b/step_by_step/step_8.html
@@ -81,7 +81,7 @@
         <p>Filler: Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
         <h2>Video</h2>
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/hsKbYYBnGDM"></iframe></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/Q0CbN8sfihY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
         
       </div>  
